--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-router-dom": "^7.7.1",
-        "cheerio": "^1.0.0"
+        "cheerio": "1.0.0-rc.12"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
