--- a/package.json
+++ b/package.json
@@ -17,26 +17,27 @@
         "@mui/icons-material": "^7.2.0",
         "@mui/material": "^7.2.0",
         "@mui/x-data-grid": "^8.9.1",
+        "cheerio": "1.0.0-rc.12",
+        "dotenv": "^17.2.3",
         "html2canvas": "^1.4.1",
         "jspdf": "^3.0.1",
         "lucide-react": "^0.534.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-router-dom": "^7.7.1",
-        "cheerio": "1.0.0-rc.12"
+        "react-router-dom": "^7.7.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.3.2",
+        "concurrently": "^9.0.1",
         "eslint": "^9.30.1",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
         "globals": "^16.3.0",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.35.1",
-        "vite": "^5.4.8",
-        "concurrently": "^9.0.1"
+        "vite": "^5.4.8"
     }
 }
