refactor(server): update translation API integration from Gemini to Groq
- Replace Google Gemini API key with Groq API key in environment configuration.
- Refactor translation function to utilize Groq's API for text translation.
- Update request structure and error handling to align with Groq's API specifications.
- Enhance comments and logging for better clarity and debugging.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # Configurações do PF2e Tools
 # Copie este arquivo para .env e preencha com suas chaves
 
-# API Key do Google Gemini (para tradução)
-# Obtenha em: https://aistudio.google.com/apikey
-GEMINI_API_KEY=sua_chave_aqui
+# API Key do Groq (para tradução com IA)
+# Obtenha GRATUITAMENTE em: https://console.groq.com/keys
+# Modelo usado: Llama 3.1 8B (rápido e gratuito!)
+GROQ_API_KEY=sua_chave_aqui
 
 # Porta do servidor API (opcional, padrão: 3001)
 # PORT=3001
